Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-99130

REG: Images load extremely slow in webengine

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • None
    • 6.2.2
    • WebEngine
    • None
    • Linux/X11, Windows
    • 985b58f8c4 (qt/qtwebengine-chromium/94-based) edf6dfaf49 (qt/qtwebengine-chromium/90-based) d1301827d9 (qt/qtwebengine-chromium/98-based)

      Large images take extremely long to display in the 6.2.2 webview. To benchmark I took this image and plugged it into the recipebrowser example.
      With 5.12.12 it takes about 2 seconds to fully display, with 6.2.2 about 26.

        1. image-2021-12-23-09-30-54-726.png
          39 kB
          Georg Meier
        2. image-2021-12-23-09-31-20-095.png
          47 kB
          Georg Meier
        3. image-2021-12-23-09-32-51-217.png
          51 kB
          Georg Meier
        4. image-2021-12-23-09-40-42-738.png
          20 kB
          Georg Meier
        5. image-2021-12-23-10-32-34-357.png
          15 kB
          Georg Meier
        6. image-2021-12-23-10-33-36-779.png
          28 kB
          Georg Meier
        7. image-2021-12-23-10-35-09-568.png
          15 kB
          Georg Meier
        8. large.png
          134 kB
          Georg Meier
        9. XblgmufbcM.gif
          47 kB
          Georg Meier
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qt_webengine_team Qt WebEngine Team
            rumo Georg Meier
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes