[Backport] Fix wrong mipmap sampling option for Medium filter quality

Skia expects Nearest mipmap mode for Medium quality, see
SkImageShader::onMakeContext(). The mismatch may cause slow down in
scaling large images because of using SkVMBlitter for better quality.

This is a fixup of https://crrev.com/c/2888866

Change-Id: I33773c383eb4179c46bcc94b1cbc41fbcbfe3dd6
Fixes: QTBUG-99130
Bug: none
Review-URL: https://chromium-review.googlesource.com/c/chromium/src/+/3377983
Cr-Commit-Position: refs/heads/main@{#963327}
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
(cherry picked from commit 985b58f8c423a0c9e455fb804cf59e5d302dcb1e)