chromium/cc/tiles/gpu_image_decode_cache.cc
@@ -305,7 +305,7 @@ bool DrawAndScaleImage(
   const SkFilterQuality filter_quality =
       CalculateDesiredFilterQuality(draw_image);
   const SkSamplingOptions sampling(filter_quality,
-                                   SkSamplingOptions::kMedium_asMipmapLinear);
+                                   SkSamplingOptions::kMedium_asMipmapNearest);
 
   bool decode_to_f16_using_n32_intermediate =
       decode_info.colorType() == kRGBA_F16_SkColorType &&
